--- a/.github/workflows/unix.yml
+++ b/.github/workflows/unix.yml
@@ -13,19 +13,33 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+env:
+  LLVM_VERSION: 16
+  GCC_VERSION: 12
+
 jobs:
+  env-vars:
+    name: Get environment variables
+    runs-on: ubuntu-latest
+    outputs:
+      LLVM_VERSION: ${{ env.LLVM_VERSION }}
+      GCC_VERSION: ${{ env.GCC_VERSION }}
+    steps:
+      - run: echo "🤡 GitHub 🤡"
+
   formatting:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Install clang-format
         uses: ./.github/actions/install-llvm
         with:
-          packages: clang-format-16
+          version: ${{ env.LLVM_VERSION }}
+          packages: clang-format-${{ env.LLVM_VERSION }}
 
       - name: Format files
-        run: find src include -type f -a \( -name "*.cc" -o -name "*.h" \) -print0 | xargs -0 clang-format-16 -i
+        run: find src include -type f -a \( -name "*.cc" -o -name "*.h" \) -print0 | xargs -0 clang-format-${{ env.LLVM_VERSION }} -i
 
       - name: Check for differences
         run: |
@@ -34,51 +48,61 @@ jobs:
 
   build:
     runs-on: ${{ matrix.config.os }}
+    needs:
+      - env-vars
     strategy:
       fail-fast: false
       matrix:
         config:
-          - name: macOS Release
+          - name: macOS x86_64 Release
             cxx: clang++
             cc: clang
             mode: Release
             mimalloc: on
             cxxflags: -stdlib=libc++
-            os: macos-latest
-            artifact: macos
-          - name: GCC 12 Release
-            cxx: g++-12
-            cc: gcc-12
+            os: macos-13
+            artifact: macos-x86_64
+          - name: macOS arm64 Release
+            cxx: clang++
+            cc: clang
+            mode: Release
+            mimalloc: on
+            cxxflags: -stdlib=libc++
+            os: macos-14
+            artifact: macos-arm64
+          - name: GCC ${{ needs.env-vars.outputs.GCC_VERSION }} Release
+            cxx: g++-${{ needs.env-vars.outputs.GCC_VERSION }}
+            cc: gcc-${{ needs.env-vars.outputs.GCC_VERSION }}
             mode: Release
             mimalloc: on
             os: ubuntu-latest
             artifact: linux
-          - name: GCC 12 Debug
-            cxx: g++-12
-            cc: gcc-12
+          - name: GCC ${{ needs.env-vars.outputs.GCC_VERSION }} Debug
+            cxx: g++-${{ needs.env-vars.outputs.GCC_VERSION }}
+            cc: gcc-${{ needs.env-vars.outputs.GCC_VERSION }}
             mode: Debug
             mimalloc: on
             os: ubuntu-latest
-          - name: Clang 16 Release
-            cxx: clang++-16
-            cc: clang-16
+          - name: Clang ${{ needs.env-vars.outputs.LLVM_VERSION }} Release
+            cxx: clang++-${{ needs.env-vars.outputs.LLVM_VERSION }}
+            cc: clang-${{ needs.env-vars.outputs.LLVM_VERSION }}
             mode: Release
             mimalloc: on
             cxxflags: -stdlib=libc++
             ldflags: -lc++abi
             os: ubuntu-latest
           - name: Clang Tidy
-            cxx: clang++-16
-            cc: clang-16
+            cxx: clang++-${{ needs.env-vars.outputs.LLVM_VERSION }}
+            cc: clang-${{ needs.env-vars.outputs.LLVM_VERSION }}
             mode: Release
             mimalloc: on
             cxxflags: -stdlib=libc++
             ldflags: -lc++abi
             lint: true
             os: ubuntu-latest
-          - key: Clang 16 Sanitizer
-            cxx: clang++-16
-            cc: clang-16
+          - key: Clang ${{ needs.env-vars.outputs.LLVM_VERSION }} Sanitizer
+            cxx: clang++-${{ needs.env-vars.outputs.LLVM_VERSION }}
+            cc: clang-${{ needs.env-vars.outputs.LLVM_VERSION }}
             mode: Release
             mimalloc: on
             cflags: -fsanitize=address,undefined -fno-omit-frame-pointer
@@ -94,38 +118,40 @@ jobs:
       UBSAN_OPTIONS: halt_on_error=1:abort_on_error=1
       CLICOLOR_FORCE: 1
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       # ==== INSTALL ====
       - name: Update Packages
-        if: matrix.config.os != 'macos-latest'
+        if: ${{ !startsWith(matrix.config.os, 'macos-') }}
         env:
           DEBIAN_FRONTEND: noninteractive
         run: sudo apt-get update
 
       - name: Install LLVM
-        if: matrix.config.os != 'macos-latest' && matrix.config.cc == 'clang-16'
+        if: ${{ !startsWith(matrix.config.os, 'macos-') && startsWith(matrix.config.cc, 'clang') }}
         uses: ./.github/actions/install-llvm
+        with:
+          version: ${{ env.LLVM_VERSION }}
 
       - name: Install ninja (Ubuntu)
-        if: matrix.config.os != 'macos-latest'
+        if: ${{ !startsWith(matrix.config.os, 'macos-') }}
         env:
           DEBIAN_FRONTEND: noninteractive
         run: sudo apt-get install -y --no-install-recommends ninja-build
 
       - name: Install ninja (macOS)
-        if: matrix.config.os == 'macos-latest'
+        if: ${{ startsWith(matrix.config.os, 'macos-') }}
         run: brew install ninja
 
       - name: Install Valgrind
-        if: matrix.config.mode == 'Debug' && matrix.config.cc == 'gcc-12'
+        if: ${{ matrix.config.mode == 'Debug' && matrix.config.cc == 'gcc-${{ env.GCC_VERSION }}' }}
         env:
           DEBIAN_FRONTEND: noninteractive
         run: sudo apt-get install -y --no-install-recommends valgrind
 
       # ==== RESTORE CACHE ====
       - name: Restore buildcache Cache
-        uses: actions/cache/restore@v3
+        uses: actions/cache/restore@v4
         id: restore-buildcache
         with:
           path: ${{ github.workspace }}/.buildcache
@@ -136,7 +162,7 @@ jobs:
             buildcache-${{ matrix.config.os }}-${{ matrix.config.cc }}-${{ matrix.config.mode }}-${{ contains(matrix.config.cxxflags, 'sanitize') }}-${{ matrix.config.lint }}-
 
       - name: Restore Dependencies Cache
-        uses: actions/cache/restore@v3
+        uses: actions/cache/restore@v4
         id: restore-deps-cache
         with:
           path: ${{ github.workspace }}/deps
@@ -165,14 +191,14 @@ jobs:
 
       # ==== DISTRIBUTION ====
       - name: Strip Executables
-        if: matrix.config.mode == 'Release' && (matrix.config.cc == 'gcc-12' || matrix.config.os == 'macos-latest')
+        if: matrix.config.artifact != ''
         run: |
           strip build/ppr-preprocess
           strip build/ppr-backend
           strip build/footrouting
 
       - name: Create Distribution
-        if: matrix.config.mode == 'Release' && (matrix.config.cc == 'gcc-12' || matrix.config.os == 'macos-latest')
+        if: matrix.config.artifact != ''
         run: |
           mkdir ppr
           mv build/ppr-preprocess ppr
@@ -182,15 +208,15 @@ jobs:
           tar cjf ppr-${{ matrix.config.artifact }}.tar.bz2 ppr
 
       - name: Upload Distribution
-        if: matrix.config.mode == 'Release' && (matrix.config.cc == 'gcc-12' || matrix.config.os == 'macos-latest')
-        uses: actions/upload-artifact@v3
+        if: matrix.config.artifact != ''
+        uses: actions/upload-artifact@v4
         with:
           name: ppr-${{ matrix.config.artifact }}
           path: ppr-${{ matrix.config.artifact }}.tar.bz2
 
       # ==== RELEASE ====
       - name: Upload Release
-        if: github.event.action == 'published' && matrix.config.mode == 'Release' && (matrix.config.cc == 'gcc-12' || matrix.config.os == 'macos-latest')
+        if: github.event.action == 'published' && matrix.config.artifact != ''
         uses: actions/upload-release-asset@v1.0.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -202,15 +228,15 @@ jobs:
 
       # ==== SAVE CACHE ====
       - name: Save buildcache Cache
-        if: always()
-        uses: actions/cache/save@v3
+        if: always() && steps.restore-buildcache.outputs.cache-hit != 'true'
+        uses: actions/cache/save@v4
         with:
           path: ${{ github.workspace }}/.buildcache
           key: ${{ steps.restore-buildcache.outputs.cache-primary-key }}
 
       - name: Save Dependencies Cache
-        if: always()
-        uses: actions/cache/save@v3
+        if: always() && steps.restore-deps-cache.outputs.cache-hit != 'true'
+        uses: actions/cache/save@v4
         with:
           path: ${{ github.workspace }}/deps
           key: ${{ steps.restore-deps-cache.outputs.cache-primary-key }}
